# chat-server

./: .gitignore  Cargo.toml  README.md  index.html
assets/: chat.js  style.css
src/: chat.rs  main.rs  main2.rs  routes.rs  structs.rs  tmp  utils.rs
web/: index.html
web/scripts/: chat.js
